# MLPP

./: LICENSE  Makefile  README.md
build_cuda/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mlpp  tests_mlpp
src/: cuda_methods.cu  main.cpp  main_executable  mlpp.hpp
tests/: Tests.hpp  computerVision_ut.cpp  dataAnalysis_ut.cpp  neuralNetwork_ut.cpp  numPP_ut.cpp  testUtils.hpp  test_executable
tests/Datasets/: hw_100.csv
